service-nginx-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: mezink-service
spec:
  selector:
    name: mezink-app
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mezink-ingress
  labels:
    name: mezink-ingress
spec:
  rules:
    - host: mezink.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mezink-service
                port:
                  number: 8080
